# LMiC

./: .gitignore  CMakeLists.txt  README.md  foo.txt  loraconfig.h  readme.md  text
ac6_workspace/: readme.md
ac6_workspace/lmic_B-L072Z-LRWAN1/: .cproject  .project  B-L072Z-LRWAN1.xml  lmic_B-L072Z-LRWAN1 Debug.cfg
ac6_workspace/lmic_nucleoL073RZ/: .cproject  .project  lmic_nucleoL073RZ Debug.cfg
ac6_workspace/lmic_nucleoL152RE/: .cproject  .project  lmic_nucleoL152RE Debug.cfg
examples/hello/: main.c  main_dual.c
examples/hello/ses/: ble_app_uart_pca10040_s132.emProject  hello.c  hello_dual.c  main.c  main.h
examples/join/: join_main.c
examples/modem/: modem.c
examples/transmit/: transmit_main.c
examples/transmit/ses/: ble_app_uart_pca10040_s132.emProject  main.c  main.h  transmit.c
hal/: assert.h  debug.h  hal_spi.h  lpTimeout.c  lpTimeout.h  lp_ticker_api.c  lp_ticker_api.h  mbed_critical.c  mbed_critical_section_api.c  mbed_mktime.h  power_mgmt.h  sdk_boot.c  sleep_api.h  sleep_manager.c  ticker_api.c  ticker_api.h  timer_event.c  timer_event.h  us_ticker_api.c  us_ticker_api.h  utilities.c  utilities.h  wait_api.h  wait_api_no_rtos.c
lmic/: aes.c  hal.h  lmic.c  lmic.h  lmic_eu868.c  lmic_eu868.h  lmic_us915.c  lmic_us915.h  lorabase.h  oslmic.h  radio_sx126x.c  radio_sx126x.h  radio_sx127x.c  tmp.h
target_nordic/: debug.c  hal.c  hal_spi.c
target_nordic/target_nrf5x/: common_rtc.c  common_rtc.h  device.h  lp_ticker.c  my_lp_ticker.c  nvm.c  us_ticker.c
target_nordic/target_nrf5x/target_nrf52/: my_sleep.c  objects.h  sleep.c  us_ticker.h
target_nordic/target_nrf5x/target_nrf52/target_mcu_nrf52832/: hal_board.c
target_nordic/target_nrf5x/target_nrf52/target_mcu_nrf52832/config/: sdk_config.h
target_nordic/target_nrf5x/target_nrf52/target_mcu_nrf52832/device/: cmsis.h
target_stm/: debug.c  hal.c  hal_spi.c  hal_tick_overrides.c  lp_ticker_lptim.c  lp_ticker_rtc.c  mbed_overrides.c  objects_ff_arduino.h  rtc_api.c  rtc_api_hal.h  sleep.c  syscalls.c  types.h  us_ticker.c
target_stm/target_stm32l0/: cmsis.h  device.h  nvm.c  stm32l0xx_hal_conf.h  stm32l0xx_it.c
target_stm/target_stm32l0/target_disco_l072z/: hal.c  objects.h
target_stm/target_stm32l0/target_disco_l072z/device/: stm32l0xx.h
target_stm/target_stm32l0/target_disco_l072z/device/toolchain_gcc_arm/: LinkerScript.ld  startup_stm32.s
target_stm/target_stm32l0/target_nucleo_l073rz/: objects.h
target_stm/target_stm32l0/target_nucleo_l073rz/device/: system_clock.c  us_ticker_data.h
target_stm/target_stm32l0/target_nucleo_l073rz/device/toolchain_gcc_arm/: LinkerScript.ld  startup_stm32.s
target_stm/target_stm32l1/: cmsis.h  device.h  nvm.c  stm32l1xx_hal_conf.h  stm32l1xx_it.c
target_stm/target_stm32l1/target_nucleo_l152re/: hal.c  objects.h
target_stm/target_stm32l1/target_nucleo_l152re/device/: system_clock.c  system_stm32l1xx.h  us_ticker_data.h
target_stm/target_stm32l1/target_nucleo_l152re/device/toolchain_gcc_arm/: LinkerScript.ld  startup_stm32.s
trueStudioWorkspace/.metadata/: version.ini
trueStudioWorkspace/.metadata/.mylyn/.taskListIndex/: segments_1
trueStudioWorkspace/.metadata/.plugins/org.eclipse.cdt.core/: lmic_nucleoL073RZ.1540484820979.pdom  lmic_nucleoL073RZ.language.settings.xml
trueStudioWorkspace/.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/lmic_nucleoL073RZ/: lmic_nucleoL073RZ
trueStudioWorkspace/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.projects/lmic_nucleoL073RZ/: .markers
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.projects/lmic_nucleoL073RZ/.indexes/: properties.index
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.projects/lmic_nucleoL073RZ/.indexes/7e/9f/: history.index
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.projects/lmic_nucleoL073RZ/.indexes/af/: history.index
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.projects/lmic_nucleoL073RZ/org.eclipse.egit.core/: GitProjectData.properties
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
trueStudioWorkspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
trueStudioWorkspace/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
trueStudioWorkspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
trueStudioWorkspace/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2018/10/43/: refactorings.history  refactorings.index
trueStudioWorkspace/.metadata/.plugins/org.eclipse.recommenders.news.impl/downloads/: http%3A%2F%2Fsumba.atollic.com%2Frss%2Ftrueperspectives.xml
trueStudioWorkspace/.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
trueStudioWorkspace/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
trueStudioWorkspace/lmic_nucleoL073RZ/: .cproject  .project  Debug_STM32L073RZ_FLASH.ld  lmic_nucleoL073RZ.elf.launch
